--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "state": "",
     "details": "",
     "buttonLabel": "",
-    "buttonLink": "",
+    "buttonLink": "https://discord.com/invite/xVxkMgMsuu",
     "largeImageKey": "",
     "largeImageText": "",
     "smallImageKey": "",
